spacing issues, working on raptors a bit more

--- a/css/main.css
+++ b/css/main.css
@@ -452,6 +452,7 @@ transition:  .3s ease;
 .notation-wrapper{
     padding-top: 2rem;
     display: grid;
+    /* background: pink; */
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 1.5rem;
 
@@ -749,7 +750,7 @@ height:300px;
     }
 }
 
-@media screen and (max-width: 90rem) {
+@media screen and (max-width: 91rem) {
     .grid {
         grid-template-columns: 1fr 1fr 1fr;
         grid-column-gap: 1rem;
@@ -768,6 +769,17 @@ height:300px;
         grid-column-gap:1.5rem;
         /* margin-left: 2rem ; */
     }
+
+    .notation-wrapper{
+/* hacky way to prevent the notations section from hitting the horiz. limit */
+        margin-left:2rem;
+        /* margin-left: 2rem ; */
+    }
+
+}
+
+@media screen and (max-width:76.5rem){
+    
 }
 
 @media screen and (max-width:63rem){
@@ -777,6 +789,13 @@ height:300px;
         .p-wrapper{
             /* color:blue; */
             grid-template-columns:1fr;
+            /* margin-left: 2rem ; */
+        }
+    .notation-wrapper{
+            /* color:blue; */
+            grid-template-columns:1fr;
+            /* color:blueviolet; */
+            margin-left:1.5rem;
             /* margin-left: 2rem ; */
         }
 }
@@ -888,15 +907,13 @@ height:300px;
     .detail-intro{
         margin:.5rem;
     }
-    .main-section{
 
-    }
     .pstatement{
         margin:1.5rem;
     }
 
     .p-hero{
-        margin-bottom: 1rem;
+        margin-bottom: 1rem;;
     }
 .embed-container {
     position: relative;
@@ -916,4 +933,5 @@ height:300px;
     left: 0;
     width: 100%;
     height: 100%;
+}
 }
